novos ajuste solicitados (sobre obra alterado e novas fotos)

--- a/contato.html
+++ b/contato.html
@@ -34,8 +34,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=bolzKH">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=bolzKH" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=wH15Fo">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=wH15Fo" type="text/css">
 
 
 
