--- a/sobre.html
+++ b/sobre.html
@@ -35,8 +35,8 @@
 		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
 	</noscript>
-	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GsnErE">
-	<link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GsnErE" type="text/css">
+	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Osps4s">
+	<link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Osps4s" type="text/css">
 
 
 
