--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
   </noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4UFAuM">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4UFAuM" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2ktPk3">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2ktPk3" type="text/css">
 
 
 
