--- a/residencia-diamantino.html
+++ b/residencia-diamantino.html
@@ -35,8 +35,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Ipdm1c">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Ipdm1c" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=8FaKyk">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=8FaKyk" type="text/css">
 
 
 
@@ -185,10 +185,10 @@
             <div class="row mbr-gallery">
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.35-624a7403.jpg"
-                            alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -197,10 +197,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.34-a87a475b.jpg"
-                            alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -209,10 +209,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.34-4edb7e74.jpg"
-                            alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -221,10 +221,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.33-5febc6ae.jpg"
-                            alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -233,10 +233,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.33-26ea6f0f.jpg"
-                            alt="" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -245,10 +245,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.08-e8f47d14.jpg"
-                            alt="" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -257,10 +257,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.08-61e34a08.jpg"
-                            alt="" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -269,10 +269,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.07-67e60904.jpg"
-                            alt="" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -281,10 +281,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJf0mNzq-modal" data-bs-target="#unlJf0mNzq-modal">
+                        data-target="#unE0ie8knU-modal" data-bs-target="#unE0ie8knU-modal">
                         <img class="w-100" src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.07-f547eba1.jpg"
-                            alt="" data-slide-to="8" data-bs-slide-to="8" data-target="#lb-unlJf0mNzq"
-                            data-bs-target="#lb-unlJf0mNzq">
+                            alt="" data-slide-to="8" data-bs-slide-to="8" data-target="#lb-unE0ie8knU"
+                            data-bs-target="#lb-unE0ie8knU">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -300,11 +300,11 @@
 
             </div>
 
-            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="unlJf0mNzq-modal">
+            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="unE0ie8knU-modal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-unlJf0mNzq"
+                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-unE0ie8knU"
                                 data-interval="5000" data-bs-interval="5000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -362,23 +362,23 @@
                                 </div>
                                 <ol class="carousel-indicators">
                                     <li data-slide-to="0" data-bs-slide-to="0" class="active"
-                                        data-target="#lb-unlJf0mNzq" data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="2" data-bs-slide-to="2" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="3" data-bs-slide-to="3" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="4" data-bs-slide-to="4" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="5" data-bs-slide-to="5" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="6" data-bs-slide-to="6" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="7" data-bs-slide-to="7" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
-                                    <li data-slide-to="8" data-bs-slide-to="8" class="" data-target="#lb-unlJf0mNzq"
-                                        data-bs-target="#lb-unlJf0mNzq"></li>
+                                        data-target="#lb-unE0ie8knU" data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="2" data-bs-slide-to="2" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="3" data-bs-slide-to="3" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="4" data-bs-slide-to="4" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="5" data-bs-slide-to="5" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="6" data-bs-slide-to="6" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="7" data-bs-slide-to="7" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
+                                    <li data-slide-to="8" data-bs-slide-to="8" class="" data-target="#lb-unE0ie8knU"
+                                        data-bs-target="#lb-unE0ie8knU"></li>
 
 
 
@@ -391,12 +391,12 @@
                                     aria-label="Close">
                                 </a>
                                 <a class="carousel-control-prev carousel-control" role="button" data-slide="prev"
-                                    data-bs-slide="prev" href="#lb-unlJf0mNzq">
+                                    data-bs-slide="prev" href="#lb-unE0ie8knU">
                                     <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Previous</span>
                                 </a>
                                 <a class="carousel-control-next carousel-control" role="button" data-slide="next"
-                                    data-bs-slide="next" href="#lb-unlJf0mNzq">
+                                    data-bs-slide="next" href="#lb-unE0ie8knU">
                                     <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Next</span>
                                 </a>
