--- a/shopping-express-go.html
+++ b/shopping-express-go.html
@@ -35,8 +35,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fQokdR">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fQokdR" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=3YdSVP">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=3YdSVP" type="text/css">
 
 
 
@@ -133,9 +133,9 @@
                     <div class="text-wrapper align-left">
                         <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Sobre a Obra</strong></h1>
                         <p class="mbr-text align-left mbr-fonts-style mb-4 display-7">Execução completa do
-                            empreendimento da terraplanagem a entrega das chaves, obra contando com 6.000 m² de área
-                            construída, em estrutura metálica e mais 3.000 m² de estacionamento, na modalidade
-                            empreitada global.<br></p>
+                            empreendimento da terraplanagem a entrega das chaves, obra contando com <strong>6.000 m²
+                            </strong>de área construída, em estrutura metálica e mais <strong>3.000 m² </strong>de
+                            estacionamento.<br></p>
 
                     </div>
                 </div>
@@ -187,9 +187,9 @@
             <div class="row mbr-gallery">
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0047.jpg" alt="" data-slide-to="0"
-                            data-bs-slide-to="0" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="0" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -198,9 +198,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0046.jpg" alt="" data-slide-to="1"
-                            data-bs-slide-to="1" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="1" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -209,9 +209,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0044.jpg" alt="" data-slide-to="2"
-                            data-bs-slide-to="2" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="2" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -220,9 +220,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0043.jpeg" alt="" data-slide-to="3"
-                            data-bs-slide-to="3" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="3" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -231,9 +231,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0042.jpeg" alt="" data-slide-to="4"
-                            data-bs-slide-to="4" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="4" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -242,9 +242,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0041.jpg" alt="" data-slide-to="5"
-                            data-bs-slide-to="5" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="5" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -253,9 +253,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0040.jpg" alt="" data-slide-to="6"
-                            data-bs-slide-to="6" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="6" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -264,9 +264,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#unlJeiS5x6-modal" data-bs-target="#unlJeiS5x6-modal">
+                        data-target="#unE0hrAILu-modal" data-bs-target="#unE0hrAILu-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0038.jpg" alt="" data-slide-to="7"
-                            data-bs-slide-to="7" data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6">
+                            data-bs-slide-to="7" data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -281,36 +281,44 @@
 
             </div>
 
-            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="unlJeiS5x6-modal">
+            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="unE0hrAILu-modal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-unlJeiS5x6"
+                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-unE0hrAILu"
                                 data-interval="5000" data-bs-interval="5000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0047.jpg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0047.jpg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0046.jpg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0046.jpg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0044.jpg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0044.jpg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0043.jpeg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0043.jpeg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0042.jpeg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0042.jpeg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0041.jpg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0041.jpg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0040.jpg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0040.jpg"
+                                            alt="">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0038.jpg" alt="">
+                                        <img class="d-block w-100" src="assets/images/img-20240804-wa0038.jpg"
+                                            alt="">
                                     </div>
 
 
@@ -321,21 +329,21 @@
                                 </div>
                                 <ol class="carousel-indicators">
                                     <li data-slide-to="0" data-bs-slide-to="0" class="active"
-                                        data-target="#lb-unlJeiS5x6" data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
-                                    <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-unlJeiS5x6"
-                                        data-bs-target="#lb-unlJeiS5x6"></li>
+                                        data-target="#lb-unE0hrAILu" data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
+                                    <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-unE0hrAILu"
+                                        data-bs-target="#lb-unE0hrAILu"></li>
 
 
 
@@ -347,12 +355,12 @@
                                     aria-label="Close">
                                 </a>
                                 <a class="carousel-control-prev carousel-control" role="button" data-slide="prev"
-                                    data-bs-slide="prev" href="#lb-unlJeiS5x6">
+                                    data-bs-slide="prev" href="#lb-unE0hrAILu">
                                     <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Previous</span>
                                 </a>
                                 <a class="carousel-control-next carousel-control" role="button" data-slide="next"
-                                    data-bs-slide="next" href="#lb-unlJeiS5x6">
+                                    data-bs-slide="next" href="#lb-unE0hrAILu">
                                     <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Next</span>
                                 </a>
